# etl-take-home-assignment

./: .gitignore  Dockerfile  README.md  envs  main.py  pyproject.toml  requirements.txt  setup.py
docs/: Diagrama sem nome.drawio  README.md  USE_CASE.md  etl-architecture.drawio
notebook/: 2024-12-01.csv  README.md  SALES_REPORT_DISCOVERY.ipynb
src/config/: __init__.py  setup.py
src/pipeline/: etl.py
src/sinks/: __init__.py  snowflake.py  snowflake_sink.py
src/sources/: __init__.py  app_store_api.py
src/sql/: create_prod_sales_ms.sql  create_temp_sales_ms.sql
